einstellung_derive/src/trybuild_tests/invalid_custom_merge_path.stderr
error: Unknown value: `function(123 invalid path)`. Did you mean `function`?
 --> src/trybuild_tests/invalid_custom_merge_path.rs
  |
  |     #[config(merge = "function(123 invalid path)")]
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
